--- a/Buttons/index.html
+++ b/Buttons/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
     <div class="container">
-      <button class="btn">Button 1</button>
-      <button class="btn">Button 2</button>
-      <button class="btn">Button 3</button>
+      <button class="btn">Click Me</button>
+      <!-- <button class="btn">Button 2</button>
+      <button class="btn">Button 3</button> -->
     </div>
   </body>
 </html>
